# 2023-autophagy

./: .buildinfo  .gitignore  Cargo.toml  README.md  ToDo.md  analyse_results.ipynb  analysis.html  analysis.ipynb  claudine-update.typ  cluster_plots.ipynb  cr_autophagy.py  cr_autophagy_pyo3.pyi  explore_parameter_space.py  finding_clusters_analysis.ipynb  genindex.html  index.html  kernel_density_estimation.ipynb  objects.inv  param_space.html  parameter_space_2.csv  parameter_space_analysis.ipynb  parameters.typ  plot_potential.ipynb  plotting.html  py-modindex.html  requirements.txt  run_sim.py  rust-bindings.html  script_angle_snapshots.py  script_parameter_space_analysis.ipynb  script_parameter_space_explore.py  script_parameter_space_plot.py  script_plot_snapshots.py  script_run_sim.py  search.html  searchindex.js  storage.html
.doctrees/: analysis.doctree  environment.pickle  index.doctree  param_space.doctree  plotting.doctree  rust-bindings.doctree  storage.doctree
.github/workflows/: python_installation.yml  (+4 more)
2024-07-17-submission-edited-timmer/: .~lock.2024-06-27-SupplementaryInformation_Licheva.docx#  2024-06-27-SupplementaryInformation_Licheva.docx  2024-06-27-manuscript_Licheva.docx  notes.txt
_sources/: analysis.rst.txt  param_space.rst.txt  storage.rst.txt
cr_autophagy/: __init__.py  analysis.py  param_space.py  plotting.py  storage.py
data/: parameter_space.csv
docs/: requirements.txt
parameter-space-plt/: snapshot-png
rust_doc/: .rustc_info.json
scripts/: analyse_results.ipynb
src/: lib.rs  particle_properties.rs  simulation.rs
(+1436 files in other folders)
